Added changes aftre code review