@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -19,15 +18,13 @@ public class StreamPractice {
      */
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
-                .map(s -> s.replaceAll("\\s+", ""))
-                .map(s -> s.split(","))
-                .flatMap(Arrays::stream)
+                .flatMap(input -> Arrays.stream(input.split(",")))
                 .map(Integer::parseInt)
-                .filter(n -> n % 2 == 0)
+                .filter(num -> num % 2 == 0)
                 .mapToInt(n -> n)
                 .min()
                 .orElseThrow(() -> new RuntimeException(
-                "Can't get min value from list: " + Arrays.toString(numbers.toArray())));
+                        "Can't get min value from list: " + Arrays.toString(numbers.toArray())));
     }
 
     /**
@@ -36,12 +33,9 @@ public class StreamPractice {
      * But before that subtract 1 from each element on an odd position (having the odd index).
      */
     public Double getOddNumsAverage(List<Integer> numbers) {
-        int[] array = IntStream.range(0, numbers.size())
-                .map(i -> (i % 2 == 1) ? numbers.get(i) - 1 : numbers.get(i))
-                .toArray();
-
-        return Arrays.stream(array)
-                .filter(i -> i % 2 == 1)
+        return IntStream.range(0, numbers.size())
+                .map(i -> i % 2 == 1 ? numbers.get(i) - 1 : numbers.get(i))
+                .filter(n -> n % 2 == 1)
                 .average()
                 .orElseThrow(() -> new NoSuchElementException(
                 "Can't get average value from list: " + Arrays.toString(numbers.toArray())));
@@ -57,9 +51,9 @@ public class StreamPractice {
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
         return peopleList.stream()
-                .filter(s -> s.getSex().equals(Person.Sex.MAN))
-                .filter(a -> a.getAge() >= fromAge && a.getAge() <= toAge)
-                .collect(Collectors.toList());
+                .filter(person -> person.getSex().equals(Person.Sex.MAN)
+                        && person.getAge() >= fromAge && person.getAge() <= toAge)
+                .toList();
     }
 
     /**
@@ -74,14 +68,11 @@ public class StreamPractice {
      */
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        return peopleList.stream().filter(p -> {
-            if (p.getSex().equals(Person.Sex.WOMAN)
-                    && p.getAge() >= fromAge && p.getAge() <= femaleToAge) {
-                return true;
-            }
-            return p.getSex().equals(Person.Sex.MAN)
-                    && p.getAge() >= fromAge && p.getAge() <= maleToAge;
-        }).collect(Collectors.toList());
+        return peopleList.stream()
+                .filter(p -> p.getSex() == Person.Sex.WOMAN
+                        ? p.getAge() >= fromAge && p.getAge() <= femaleToAge
+                        : p.getAge() >= fromAge && p.getAge() <= maleToAge)
+                .toList();
     }
 
     /**
@@ -91,12 +82,10 @@ public class StreamPractice {
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
         return peopleList.stream()
-                .filter(a -> a.getAge() >= femaleAge)
-                .filter(s -> s.getSex().equals(Person.Sex.WOMAN))
-                .map(Person::getCats)
-                .flatMap(List::stream)
+                .filter(p -> p.getSex().equals(Person.Sex.WOMAN) && p.getAge() >= femaleAge)
+                .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -112,11 +101,10 @@ public class StreamPractice {
      * parametrized with Candidate in CandidateValidator.
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
-        CandidateValidator candidateValidator = new CandidateValidator();
         return candidates.stream()
-                .filter(candidateValidator)
+                .filter(new CandidateValidator())
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
